<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password" />

    <EditTextPreference
        android:inputType="text"
        android:key="nmr_residences"
        android:summary="@string/nmr_residences_summary"
        android:title="@string/nmr_residences" />

    <EditTextPreference
        android:inputType="text"
        android:key="refresh_interval"
        android:summary="@string/set_refresh_interval_summary"
        android:title="@string/set_refresh_interval" />

</PreferenceScreen>